Changelog - Order most recent last

3:58pm - added the changelog
-Derek Larson