@@ -29,5 +29,5 @@ class Welcome extends Application
 
 		$this->render();
 	}
-
+        
 }
