@@ -1,3 +1,4 @@
+browser.reload.on.save=true
 include.path=${php.global.include.path}
 php.version=PHP_55
 source.encoding=UTF-8
